--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Trần Hồng Phúc (Web Developer)</h1>
+	<img src="image/1.jpg">
 	 <hr>
 	<div class="thongtin">
 		<b>Ngày Sinh:</b> <i>1997</i>
