--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<a href="index.html">Home</a>
+	<a href="gallery.html">Gallery</a>
 	<h1>Trần Hồng Phúc (Web Developer)</h1>
 	<img src="image/1.jpg">
 	 <hr>
